--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,7 @@
 <h1>About</h1>
+<head>
+  <title>About | Ruby on Rails Tutorial Sample App</title>
+</head
 <p>
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
   is a <a href="https://railstutorial.jp/#ebook">book</a> and
