--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,7 @@
 <h1>StaticPages#help</h1>
+<head>
+  <title>Help | Ruby on Rails Tutorial Sample App</title>
+</head
 <p>Get help on the Ruby on Rails Tutorial at the
   <a href="https://railstutorial.jp/help">Rails Tutorial help page</a>.
   To get help on this sample app, see the
