--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,8 @@
 <h1>StaticPages#home</h1>
-<p>this is the home page 
+<head>
+  <title>Home | Ruby on Rails Tutorial Sample App</title>
+</head
+<p>this is the home page
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
