Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,5 @@
+<% provide(:title, "Home") %>
 <h1>StaticPages#home</h1>
-<head>
-  <title>Home | Ruby on Rails Tutorial Sample App</title>
-</head
 <p>this is the home page
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
   sample application.
