--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,5 @@
+<% provide(:title, "About") %>
 <h1>About</h1>
-<head>
-  <title>About | Ruby on Rails Tutorial Sample App</title>
-</head
 <p>
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
   is a <a href="https://railstutorial.jp/#ebook">book</a> and
