--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,3 +17,5 @@
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),  'http://rubyonrails.org/' %>
+<br>
+<%= link_to image_tag("kitten.jpg", alt: "Rails logo"),  'https://www.google.com/search?newwindow=1&client=safari&rls=en&biw=1280&bih=739&tbm=isch&q=こねこ&backchip=g_2:可愛い&chips=q:こねこ&sa=X&ved=0ahUKEwiv9qrio-LaAhUGpZQKHR9PD3MQ3VYIJSgA' %>
