--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,22 @@
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
-
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1>Welcome to the Sample App</h1>
 
@@ -19,3 +34,4 @@
 <%= link_to image_tag("rails.png", alt: "Rails logo"),  'http://rubyonrails.org/' %>
 <br>
 <%= link_to image_tag("kitten.jpg", alt: "Rails logo"),  'https://www.google.com/search?newwindow=1&client=safari&rls=en&biw=1280&bih=739&tbm=isch&q=こねこ&backchip=g_2:可愛い&chips=q:こねこ&sa=X&ved=0ahUKEwiv9qrio-LaAhUGpZQKHR9PD3MQ3VYIJSgA' %>
+<% end %>
